--- a/Figma-to-Html-Css/index2.html
+++ b/Figma-to-Html-Css/index2.html
@@ -47,7 +47,7 @@
                         <a class="nav-link" class="about-us">About Us</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" class="reason-why">How it works</a>
+                        <a class="nav-link" class="works">How it works</a>
                       </li>
 
                       <li class="nav-item">
